--- a/P4/CMakeLists.txt
+++ b/P4/CMakeLists.txt
@@ -2,3 +2,5 @@ add_executable(P4 p4_inverseiteration.c
         miniblas.c miniblas.h
         matrix.c matrix.h
         basic.c basic.h)
+
+target_link_libraries(P4 m)
