--- a/P4/CMakeLists.txt
+++ b/P4/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(P4 p4_inverseiteration.c
+add_executable(P4
         miniblas.c miniblas.h
         matrix.c matrix.h
         basic.c basic.h)
