--- a/P9/Makefile
+++ b/P9/Makefile
@@ -3,6 +3,7 @@ CC = gcc
 CFLAGS = -Wall -Werror \
 	 -O3 -funroll-loops -march=native -mtune=native \
          -std=c99
+GLUT = -lglut -lGLU -lGL
 
 all: p9_adaptive
 
@@ -13,7 +14,7 @@ quadrature.o: quadrature.c quadrature.h basic.h
 	$(CC) -c $(CFLAGS) $< -o $@ 
 
 p9_adaptive: p9_adaptive.o basic.o quadrature.o
-	$(CC) $^ -o $@ -lm
+	$(CC) $(CFLAGS) $^ -o $@ $(GLUT) -lm
 
 p9_adaptive.o: p9_adaptive.c quadrature.h 
 	$(CC) $(CFLAGS) -c $< -o $@
