--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,6 @@ add_subdirectory(P4)
 add_subdirectory(P5)
 add_subdirectory(P6)
 add_subdirectory(P7)
+add_subdirectory(P8)
+add_subdirectory(P9)
 add_subdirectory(glut)
