--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ add_subdirectory(P6)
 add_subdirectory(P7)
 add_subdirectory(P8)
 add_subdirectory(P9)
+add_subdirectory(P10)
 add_subdirectory(glut)
