--- a/P10/CMakeLists.txt
+++ b/P10/CMakeLists.txt
@@ -1,6 +1,7 @@
-add_executable(P10 basic.h basic.c
+add_executable(P10 basic.c basic.h
         crs.h crs.c
-        matrix.h
+        matrix.h matrix.c
         miniblas.h miniblas.c
         p10_crs.c)
 
+target_link_libraries(P10 winmm)
